--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>webpack starterkit</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <h1 data-aos="fade-up">webpack starter</h1>
+  <p data-aos="fade-up">✨ A lightweight foundation for your next webpack based frontend project.</p>
 </body>
 </html>
