feat: header layout HTML

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,44 @@
 </head>
 
 <body>
-  <h1 data-aos="fade-up">webpack starter</h1>
-  <p data-aos="fade-up">✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <header class="header">
+    <div class="header__content">
+      <h1 
+        class="main-title" 
+        data-aos="fade-down"
+        data-aos-delay="100"
+      >
+        uma seleção de produtos
+        <strong>especial para você</strong>
+      </h1>
+      <h2 
+        class="main-subtitle" 
+        data-aos="fade-down" 
+        data-aos-delay="200"
+      >
+        Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!
+      </h2>
+
+      <nav 
+        class="nav"
+        data-aos="fade-down" 
+        data-aos-delay="300"
+      >
+        <div class="nav__item">
+          <a href="#" class="nav__link" >Conheça a Linx</a>
+        </div>
+        <div class="nav__item">
+          <a href="#" class="nav__link" >Ajude o algorítimo</a>
+        </div>
+        <div class="nav__item">
+          <a href="#" class="nav__link" >Seus produtos</a>
+        </div>
+        <div class="nav__item">
+          <a href="#" class="nav__link" >Compartilhe</a>
+        </div>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
