--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,62 @@
       </nav>
     </div>
   </header>
+  <main>
+    <section 
+      class="contact" 
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-back"
+      data-aos-delay="300"
+      data-aos-offset="0"
+    >
+      <article class="contact__content">
+        <h3 class="title">Ajude o algorítimo a ser mais certeiro</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis 
+          sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. 
+          Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. 
+          Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
+          per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend. 
+        </p>
+        <p class="text">
+          Morbi eu condimentum urna. 
+          Curabitur eu magna eget turpis condimentum ultrices. Suspendisse quis lorem ultricies, pulvinar purus sed, egestas erat. 
+          Etiam ultricies a ante vehicula pharetra. Quisque ut neque mattis, consequat velit ut, ultrices orci. 
+          Nulla varius elementum erat vel pharetra. Aenean sit amet nisi diam. Morbi viverra, magna ac luctus commodo, 
+          odio ante suscipit libero, at mattis augue est vel metus.
+        </p>
+      </article>
+      <div class="contact__form">
+        <form class="form">
+          <div class="form__group">
+            <label class="form__label" for="name">Seu nome:</label>
+            <input type="text" class="form__control" id="name" />
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="email">E-mail:</label>
+            <input type="text" class="form__control" id="email" />
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="cpf">CPF:</label>
+            <input type="text" class="form__control" id="cpf" />
+          </div>
+          <div class="form__group">
+            <div class="form__radio">
+              <input type="radio" name="gender" id="male" />
+              <label for="male">Masculino</label>
+            </div>
+            <div class="form__radio">
+              <input type="radio" name="gender" id="female" />
+              <label for="female">Feminino</label>
+            </div>
+          </div>
+          <button class="button button--primary button--block">
+            Enviar
+          </button>
+        </form>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
