feat: products section

--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,13 @@
   </header>
   <main>
     <section 
-      class="contact" 
+      class="contact-section" 
       data-aos="fade-zoom-in"
       data-aos-easing="ease-in-back"
       data-aos-delay="300"
       data-aos-offset="0"
     >
-      <article class="contact__content">
+      <article class="contact-section__content">
         <h3 class="title">Ajude o algorítimo a ser mais certeiro</h3>
         <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis 
@@ -71,7 +71,7 @@
           odio ante suscipit libero, at mattis augue est vel metus.
         </p>
       </article>
-      <div class="contact__form">
+      <div class="contact-section__form">
         <form class="form">
           <div class="form__group">
             <label class="form__label" for="name">Seu nome:</label>
@@ -101,6 +101,16 @@
         </form>
       </div>
     </section>
+    <section 
+      class="products-section"
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-back"
+      data-aos-delay="300"
+      data-aos-offset="0"
+    >
+    <h3 class="section-title"><span>Sua seleção especial</span></h3>
+    <div data-js="productsComponent"></div>
+  </section>
   </main>
 </body>
 
