feat: create newsletter section

--- a/src/index.html
+++ b/src/index.html
@@ -108,9 +108,39 @@
       data-aos-delay="300"
       data-aos-offset="0"
     >
-    <h3 class="section-title"><span>Sua seleção especial</span></h3>
-    <div data-js="productsComponent"></div>
-  </section>
+      <h3 class="section-title"><span>Sua seleção especial</span></h3>
+      <div data-js="productsComponent"></div>
+    </section>
+    <section
+      class="newsletter-section"
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-back"
+      data-aos-delay="300"
+      data-aos-offset="0"
+    >
+      <h3 class="section-title"><span>Compartilhe a novidade</span></h3>
+
+      <div class="newsletter-section__content">
+        <h4 class="newsletter-section__text">
+          Quer que seus amigos também ganhem a lista personalizada deles? 
+          Preencha agora!</h4>
+        <form class="form">
+          <div class="form__group">
+            <label class="form__label" for="name">Nome do seu amigo:</label>
+            <input type="text" class="form__control" id="name" />
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="email">E-mail:</label>
+            <input type="text" class="form__control" id="email" />
+          </div>
+          <div class="form__submit">
+            <button class="button button--primary button--xl">
+              Enviar Agora
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
   </main>
 </body>
 
