feat: add newsletter component and validate email field

--- a/src/index.html
+++ b/src/index.html
@@ -124,21 +124,7 @@
         <h4 class="newsletter-section__text">
           Quer que seus amigos também ganhem a lista personalizada deles? 
           Preencha agora!</h4>
-        <form class="form">
-          <div class="form__group">
-            <label class="form__label" for="name">Nome do seu amigo:</label>
-            <input type="text" class="form__control" id="name" />
-          </div>
-          <div class="form__group">
-            <label class="form__label" for="email">E-mail:</label>
-            <input type="text" class="form__control" id="email" />
-          </div>
-          <div class="form__submit">
-            <button class="button button--primary button--xl">
-              Enviar Agora
-            </button>
-          </div>
-        </form>
+          <div data-js="newsLetterComponent"></div>
       </div>
     </section>
   </main>
