chore: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,20 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+      <div 
+        class="footer__content"
+        class="newsletter-section"
+        data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0"
+      >
+        <p>Testando suas habilidades em HTML, CSS e JS.</p> 
+        <p>Linx Impulse </p>
+        <p>2019</p>
+      </div>
+  </footer>
 </body>
 
 </html>
